--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "core-js": "^3.8.3",
+    "mitt": "^3.0.1",
     "pinia": "^2.1.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
