--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "mitt": "^3.0.1",
     "pinia": "^2.1.6",
+    "uuid": "^9.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
